test/tests/compiler/16_characters_and_strings/invalid_types/plx1_string_is_not_char_pointer_pointer.plx
pub fn main(none) i32 {
    a: char = 'x'
    a_ptr: *char = @a
    str: string = @a_ptr
    return 0
}
